@@ -365,7 +365,11 @@ ServiceCallContext::$supportedActions[] = Array(
             print $context->padding."   * moved, no conflict\n";
             if( $context->isAPI )
             {
-                derr("unsupported with API yet, use offline mode instead");
+                $oldXpath = $object->getXPath();
+                $object->owner->remove($object);
+                $targetStore->add($object);
+                $object->API_sync();
+                $context->connector->sendDeleteRequest($oldXpath);
             }
             else
             {
